--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -114,7 +114,7 @@
                     <tbody>
                         @foreach (var item in dsctk)
                         {
-                            if (item.TinhTrang == "Sắp hết hàng")
+                            if (item.TinhTrang == "Sắp hết hàng" || item.TinhTrang == "Hết hàng")
                             {
                                 <tr>
                                     <td>
