--- a/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
@@ -31,7 +31,7 @@
                         <label class="control-label">- Nhập vào các kho: </label> <br />
                         @for (int i = 0; i < dsCTKho.Count; i++)
                         {
-                            if (dsCTKho[i].TinhTrang == "Sắp hết hàng")
+                            if (dsCTKho[i].TinhTrang == "Sắp hết hàng" || dsCTKho[i].TinhTrang == "Hết hàng")
                             {
                                 distint.Add(dsCTKho[i].MaKho);
                                 distint = distint.Distinct().ToList();
