layout Phong Giao Hang

--- a/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
+++ b/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
@@ -55,19 +55,18 @@
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.home" href="TrangChu">
-                    <i class='app-menu__icon bx bx-tachometer'></i>
-                    <span class="app-menu__label">Trang chủ</span>
+                <a class="app-menu__item @ViewBag.home" href="TrangChu"> 
+                    <i class='app-menu__icon bx bx-package'></i> <span class="app-menu__label">Đơn hàng mới</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item  @ViewBag.hd" href="DanhSachHD">
-                    <i class='app-menu__icon bx bx-id-card'></i> <span class="app-menu__label">Danh sách hóa đơn</span>
+                    <i class='app-menu__icon bx bxs-spreadsheet'></i> <span class="app-menu__label">Danh sách đơn hàng</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.dh" href="TiepNhanDH">
-                    <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Tiếp nhận đơn hàng</span>
+                    <i class='app-menu__icon bx bx-undo'></i><span class="app-menu__label">Đơn hàng hoàn</span>
                 </a>
             </li>
             <li>
