--- a/Test02/Views/QTV/ThemNV.cshtml
+++ b/Test02/Views/QTV/ThemNV.cshtml
@@ -19,7 +19,7 @@
                         <option selected>NVKD</option>
                         <option>NVKT</option>
                         <option>NVK</option>
-
+                        <option>NVGH</option>
                     </select>
                     @Html.ValidationMessageFor(model => model.MaChucVu, "", new { @class = "text-danger" })
                 </div>
