--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -59,37 +59,37 @@
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.tq" href="Test02">
+                <a class="app-menu__item @ViewBag.tq" href="~/PhongKho/Test02">
                     <i class='app-menu__icon bx bx-tachometer'></i>
                     <span class="app-menu__label">Tổng quan</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.qlk" href="QuanLyKho">
+                <a class="app-menu__item @ViewBag.qlk" href="~/PhongKho/QuanLyKho">
                     <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
                         Quản lý Kho
                     </span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.hh" href="QuanLyDL">
+                <a class="app-menu__item @ViewBag.hh" href="~/PhongKho/QuanLyDL">
                     <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Quản lý hàng hóa</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.nk" href="NhapKho">
+                <a class="app-menu__item @ViewBag.nk" href="~/PhongKho/NhapKho">
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý phiếu nhập/xuất</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.tk" href="TonKho">
+                <a class="app-menu__item @ViewBag.tk" href="~/PhongKho/TonKho">
                     <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
                         Tồn kho
                     </span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.bc" href="BaoCao">
+                <a class="app-menu__item @ViewBag.bc" href="~/PhongKho/BaoCao">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Kiểm kê / báo cáo</span>
                 </a>
             </li>
