--- a/Test02/Views/PhongKho/QuanLyKho.cshtml
+++ b/Test02/Views/PhongKho/QuanLyKho.cshtml
@@ -48,9 +48,10 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="tile">
+            <h3 class="tile-title" style="text-align:center;"><b>DANH SÁCH KHO HÀNG</b></h3>
             <div class="tile-body">
                 <div class="row element-button">
-                    <a class="btn btn-add btn-sm" href="ThemKho" title="Thêm" style="margin-left:20px;">
+                    <a class="btn btn-add btn-sm" href="~/PhongKho/ThemKho" title="Thêm" style="margin-left:20px;">
                         <i class="fas fa-plus"></i>
                         Thêm kho mới
                     </a>
