--- a/Test02/Views/PhongKho/Test02.cshtml
+++ b/Test02/Views/PhongKho/Test02.cshtml
@@ -4,16 +4,16 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Tổng quan";
     ViewBag.tq = "active";
-    
+
 }
 
 <div class="row">
-    <!--Left-->
+    <!--Thông tin kho và số sản phẩm sắp hết hàng-->
     <div class="col-md-12 col-lg-12">
         <div class="row">
             <!-- col-6 -->
             <div class="col-6">
-                <a class="widget-small primary coloured-icon @ViewBag.qlk" href="QuanLyKho">
+                <a class="widget-small info coloured-icon @ViewBag.qlk" href="~/PhongKho/QuanLyKho">
                     <i class='icon bx bxs-user-account fa-3x'></i>
                     <div class="info">
                         <h4>Thông tin kho</h4>
@@ -24,7 +24,7 @@
             </div>
             <!-- col-6 -->
             <div class="col-6">
-                <a class="widget-small danger coloured-icon @ViewBag.hh" href="QuanLyDL">
+                <a class="widget-small warning coloured-icon @ViewBag.hh" href="~/PhongKho/QuanLyDL">
                     <i class='icon bx bxs-error-alt fa-3x'></i>
                     <div class="info">
                         <h4>Sắp hết hàng</h4>
@@ -35,8 +35,66 @@
             </div>
         </div>
     </div>
-    <!--END left-->
+    <!--Tổng sản phẩm và sản phẩm tồn kho-->
+    <div class="col-md-12 col-lg-12">
+        <div class="row">
+            <!-- col-6 -->
+            <div class="col-6">
+                <a class="widget-small primary coloured-icon @ViewBag.qlk" href="~/PhongKho/QuanLyDL">
+                    <i class='icon bx bxs-shopping-bag-alt fa-3x'></i>
+                    <div class="info">
+                        <h4>Thông tin sản phẩm</h4>
+                        <p><b>Tổng @TempData["Tongsp1"] sản phẩm</b></p>
+                        <p class="info-tong">Tổng số sản phẩm có trong các kho.</p>
+                    </div>
+                </a>
+            </div>
+            <!-- col-6 -->
+            <div class="col-6">
+                <a class="widget-small danger coloured-icon @ViewBag.hh" href="~/PhongKho/TonKho">
+                    <i class='icon bx bxs-tag-x fa-3x'></i>
+                    <div class="info">
+                        <h4>Sản phẩm tồn kho</h4>
+                        <p><b>@TempData["TongSPTK"] sản phẩm</b></p>
+                        <p class="info-tong">Tổng số sản phẩm tồn kho trong các kho.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!--Tổng phiếu xuất và tổng phiếu nhập-->
+    <div class="col-md-12 col-lg-12">
+        <div class="row">
+            <!-- col-6 -->
+            <div class="col-6">
+                <a class="widget-small info coloured-icon @ViewBag.qlk" href="~/PhongKho/NhapKho">
+                    <i class='icon bx bxs-receipt fa-3x'></i>
+                    <div class="info">
+                        <h4>Phiếu nhập kho</h4>
+                        <p><b>Tổng @TempData["Tongpn"] phiếu được tạo</b></p>
+                        <p class="info-tong">Phiếu nhập hàng hóa vào kho.</p>
+                    </div>
+                </a>
+            </div>
+            <!-- col-6 -->
+            <div class="col-6">
+                <a class="widget-small primary coloured-icon @ViewBag.hh" href="~/PhongKho/NhapKho">
+                    <i class='icon bx bxs-info-circle fa-3x'></i>
+                    <div class="info">
+                        <h4>Phiếu xuất kho</h4>
+                        <p><b>@TempData["Tongpx"] phiếu được tạo</b></p>
+                        <p class="info-tong">Phiếu xuất hàng hóa ra khỏi kho.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!--END-->
 </div>
+@* 
+    Thông tin tổng quan từ báo cáo dời lên
+*@
+
 <!-- col-12 -->
 <div class="row">
     <div class="col-lg-12">
