--- a/Test02/Views/PhongKho/Themkho.cshtml
+++ b/Test02/Views/PhongKho/Themkho.cshtml
@@ -1,9 +1,12 @@
 ﻿@model Test02.Models.Kho
+@using Test02.Models
 @{
     ViewBag.Title = "Themkho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Thêm kho mới";
     ViewBag.qlk = "active";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    var dskho = db.Khoes.ToList();
 }
 
 
@@ -42,7 +45,7 @@
                                 <input type="submit" value="Lưu dữ liệu" class="btn btn-dark" title="Lưu" />
                             </div>
                             <div class="col-sm-2">
-                                <a class="btn btn-add btn-sm" href="QuanLyKho" title="Trở về">
+                                <a class="btn btn-add btn-group-sm" href="~/PhongKho/QuanLyKho" title="Trở về">
                                     Trở về
                                 </a>
                             </div>
@@ -52,5 +55,47 @@
             </div>
         </div>
     </div>
+
 }
+<div class="row">
+    <div class="col-lg-12">
+        <div class="tile">
+            <h3 class="tile-title">Kho hàng đã thêm</h3>
+            <div class="tile-body">
+                <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+                       id="sampleTable">
+                    <thead>
+                        <tr>
+                            <th>
+                                Mã kho
+                            </th>
+                            <th>
+                                Tên kho
+                            </th>
+                            <th>
+                                Địa chỉ
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in dskho)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.MaKho)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TenKho)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DiaChi)
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
