--- a/Test02/Views/PhongKho/Themkho.cshtml
+++ b/Test02/Views/PhongKho/Themkho.cshtml
@@ -25,15 +25,15 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         @Html.HiddenFor(model => model.MaKho)
                         <div class="form-group">
-                            @Html.LabelFor(model => model.TenKho, htmlAttributes: new { @class = "control-label col-md-12" })
+                            @Html.LabelFor(model => model.TenKho, "Tên kho", htmlAttributes: new { @class = "control-label col-md-12"})
                             <div class="col-md-12">
-                                @Html.EditorFor(model => model.TenKho, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.TenKho, new { htmlAttributes = new { @class = "form-control "} })
                                 @Html.ValidationMessageFor(model => model.TenKho, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label col-md-12" })
+                            @Html.LabelFor(model => model.DiaChi, "Địa chỉ", htmlAttributes: new { @class = "control-label col-md-12" })
                             <div class="col-md-12">
                                 @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
