--- a/Test02/Views/PhongKho/BaoCao.cshtml
+++ b/Test02/Views/PhongKho/BaoCao.cshtml
@@ -113,7 +113,7 @@
                 <h3 class="tile-title">DANH SÁCH BIÊN BẢNG KIỂM KÊ</h3>
             </div>
             <div class="tile-body">
-                <table class="table table-hover table-bordered" id="sampleTable">
+                <table class="table table-hover table-striped table-bordered" id="sampleTable">
                     <thead>
                         <tr>
                             <th>
