--- a/Test02/Views/PhongKho/Test02.cshtml
+++ b/Test02/Views/PhongKho/Test02.cshtml
@@ -100,10 +100,10 @@
     <div class="col-lg-12">
         <div class="tile">
             <h3 class="tile-title">Danh sách kho hàng</h3>
-            <div class="tile-body">
-                <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+            <div class="tile-body table-responsive">
+                <table class="table table-hover table-bordered table-striped js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                        id="sampleTable">
-                    <thead>
+                    <thead class="table-success">
                         <tr>
                             <th>
                                 Mã kho
