--- a/Test02/Views/KinhDoanh/QuanLySP.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLySP.cshtml
@@ -44,6 +44,7 @@
                 <tr>
                     <th>Mã sản phẩm</th>
                     <th>Tên sản phẩm</th>
+                    <th>Hình ảnh</th>
                     <th>Giá</th>
                     <th>Đơn vị tính</th>
                     <th>Ngày sản xuất</th>
@@ -61,6 +62,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.TenSP)
+                        </td>
+                        <td>
+                            <img src="@item.HinhAnh" style="width:100px" />
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Gia)
