--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -5,7 +5,42 @@
     ViewBag.Name = "Chi tiết kho";
     ViewBag.qlk = "active";
 }
-
+@{
+    var checkMessage = TempData["AlertMessage"];
+    if (checkMessage == "Đã xóa")
+    {
+        <script>
+            swal({
+                title: "Xóa thành công",
+                text: "Đã xóa @TempData["MaCTKkk"]!",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    }
+    else if (checkMessage == "Đã thêm")
+    {
+        <script>
+            swal({
+                title: "Thêm thành công",
+                text: "Đã thêm @TempData["MaCTKkk"]!",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    }
+    else if (checkMessage == "Đã cập nhật")
+    {
+        <script>
+            swal({
+                title: "Cập nhật thành công",
+                text: "Đã cập nhật @TempData["MaCTKkk"]!",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    }
+}
 <div class="row">
     <div class="col-lg-12">
         <div class="tile">
@@ -84,7 +119,7 @@
                             </tr>
                         }
                     </tbody>
-                    
+
                 </table>
             </div>
             <div>
