Fc_table_responsive_19/2

--- a/Test02/Views/PhongKho/DeleteCTKho.cshtml
+++ b/Test02/Views/PhongKho/DeleteCTKho.cshtml
@@ -67,10 +67,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Xóa vĩnh viễn" class="btn btn-danger" /> |
-            <a class="btn btn-danger btn-sm" href="/PhongKho/QuanLyKho" title="Thêm">
+            <input type="submit" value="Xóa vĩnh viễn" class="btn btn-danger" /> 
+            <a class="btn btn-outline-danger btn-sm" href="/PhongKho/ChiTietKho/@Model.MaKho" title="Trở lại">
                 <i class="fas fa-retweet"></i>
-                Trở lại danh sách kho
+                Trở lại
             </a>
         </div>
     }
