--- a/Test02/Views/PhongKho/QuanLyKho.cshtml
+++ b/Test02/Views/PhongKho/QuanLyKho.cshtml
@@ -95,7 +95,7 @@
                                 </td>
                                 <td>
                                     <a href="~/PhongKho/ChinhSuaKho/@item.MaKho" class="btn btn-outline-primary btn-sm" title="Chỉnh sửa"><i class="fa fa-edit"></i></a>
-                                    <a href="~/PhongKho/ChiTietKho/@item.MaKho" class="btn btn-outline-info btn-sm" title="Chi tiết"> <i class="fa fa-info"></i> </a>
+                                    <a href="~/PhongKho/ChiTietKho/@item.MaKho" class="btn btn-outline-info btn-md" title="Chi tiết"> <i class="fa fa-info"></i> </a>
                                     <a href="~/PhongKho/XoaKho/@item.MaKho" class="btn btn-outline-danger btn-sm" title="Xóa"><i class="fa fa-remove"></i></a>
                                 </td>
                             </tr>
