--- a/Test02/Views/PhongKho/BaoCao.cshtml
+++ b/Test02/Views/PhongKho/BaoCao.cshtml
@@ -112,7 +112,7 @@
             <div>
                 <h3 class="tile-title">DANH SÁCH BIÊN BẢNG KIỂM KÊ</h3>
             </div>
-            <div class="tile-body">
+            <div class="tile-body table-responsive">
                 <table class="table table-hover table-striped table-bordered" id="sampleTable">
                     <thead>
                         <tr>
