--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -52,78 +52,80 @@
                         Thêm chi tiết kho
                     </a>
                 </div>
-                <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-                       id="sampleTable">
-                    <thead>
-                        <tr>
-                            <th>
-                                Mã chi tiết kho
-                            </th>
-                            <th>
-                                Mã sản phẩm
-                            </th>
-                            <th>
-                                Tên sản phẩm
-                            </th>
-                            <th>
-                                Ngày nhập
-                            </th>
-                            <th>
-                                Ngày xuất
-                            </th>
-                            <th>
-                                Số lượng
-                            </th>
-                            <th>
-                                Tình trạng
-                            </th>
-                            <th>
-                                Chức năng
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+                <div class="table-responsive">
+                    <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+                           id="sampleTable">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MaCTKho)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MaSP)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SanPham.TenSP)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.NgayNhap)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.NgayXuat)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SoLuong)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TinhTrang)
-                                </td>
-
-                                <td>
-                                    <a href="/PhongKho/EditCTKho//@item.MaCTKho" class="btn btn-primary btn-sm edit">
-                                        <i class="fas fa-edit"></i>
-                                    </a>||
-                                    <a href="/PhongKho/DeleteCTKho//@item.MaCTKho" class="btn btn-primary btn-sm trash">
-                                        <i class="fas fa-trash-alt"></i>
-                                    </a>
-                                </td>
+                                <th>
+                                    Mã chi tiết kho
+                                </th>
+                                <th>
+                                    Mã sản phẩm
+                                </th>
+                                <th>
+                                    Tên sản phẩm
+                                </th>
+                                <th>
+                                    Ngày nhập
+                                </th>
+                                <th>
+                                    Ngày xuất gần nhất
+                                </th>
+                                <th>
+                                    Số lượng
+                                </th>
+                                <th>
+                                    Tình trạng
+                                </th>
+                                <th>
+                                    Chức năng
+                                </th>
                             </tr>
-                        }
-                    </tbody>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaCTKho)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaSP)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SanPham.TenSP)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.NgayNhap)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.NgayXuat)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SoLuong)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TinhTrang)
+                                    </td>
 
-                </table>
+                                    <td>
+                                        <a href="/PhongKho/EditCTKho//@item.MaCTKho" class="btn btn-primary btn-sm edit" title="Chỉnh sửa">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                        <a href="/PhongKho/DeleteCTKho//@item.MaCTKho" class="btn btn-primary btn-sm trash" title="Xóa kho">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+
+                    </table>
+                </div>
             </div>
             <div>
-                <a class="btn btn-danger btn-sm" href="/PhongKho/QuanLyKho" title="Thêm">
+                <a class="btn btn-danger btn-sm" href="/PhongKho/QuanLyKho" title="Trở lại">
                     <i class="fas fa-retweet"></i>
                     Trở lại danh sách kho
                 </a>
