--- a/Test02/Views/PhongKho/CreateCTKho.cshtml
+++ b/Test02/Views/PhongKho/CreateCTKho.cshtml
@@ -1,80 +1,94 @@
 ﻿@model Test02.Models.ChiTietKho
+@using Test02.Models;
 @{
     ViewBag.Title = "Tạo chi tiết kho mới";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Tạo chi tiết kho";
     ViewBag.qlk = "active";
-    
-}
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    var dssp = db.SanPhams.ToList();
 
+    //Sản phẩm chưa có trong kho
+
+
+}
+@{
+    var checkMessage = TempData["AlertMessage"];
+    if (checkMessage == "check null")
+    {
+        <script>
+            swal({
+                title: "Lỗi số lượng",
+                text: "Số lượng không được để trống hoặc nhỏ hơn 0!",
+                icon: "warning",
+                button: "Nhập lại",
+            });
+        </script>
+    }
+}
 <h3>Tạo chi tiết kho của kho @Session["makho1"]</h3>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="form-horizontal col-6">
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.MaCTKho)
+            @Html.HiddenFor(model => model.MaKho)
 
-<div class="form-horizontal">
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.MaCTKho)
-    @Html.HiddenFor(model => model.MaKho)
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.MaSP, "MaSP", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            @Html.LabelFor(model => model.NgayNhap, htmlAttributes: new { @class = "control-label col-md-2" })
-            <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayNhap must be a date." id="NgayNhap" name="NgayNhap" type="datetime-local" value="">
-            
-            @Html.ValidationMessageFor(model => model.NgayNhap, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-10">
-            @Html.LabelFor(model => model.NgayXuat, htmlAttributes: new { @class = "control-label col-md-2" })
-            <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgayXuat" name="NgayXuat" type="datetime-local" value="">
-            @Html.ValidationMessageFor(model => model.NgayXuat, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.SoLuong, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.TinhTrang, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TinhTrang, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TinhTrang, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.MaSP, "Mã sản phẩm", htmlAttributes: new { @class = "control-label col-md-5" })
+                <div class="col-md-12">
+                    @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>*@
-    @*if(item.SoLuong <= 100 && item.SoLuong > 0)
-    {
-    item.TinhTrang = "Sắp hết hàng";
-    }
-    else if(item.SoLuong > 100)
-    {
-    item.TinhTrang = "Còn hàng";
-    }*@
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <div class="form-group">
+                @Html.LabelFor(model => model.SoLuong, "Số lượng /thùng", htmlAttributes: new { @class = "control-label col-md-5" })
+                <div class="col-md-12">
+                    @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.NgayNhap, "Ngày nhập vào kho", htmlAttributes: new { @class = "control-label col-md-5" })
+                <div class="col-md-12">
+                    <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayNhap must be a date." id="NgayNhap" name="NgayNhap" type="datetime-local" required>
+                    @Html.ValidationMessageFor(model => model.NgayNhap, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row form-group justify-content-between" style="margin:auto 12px">
+                <div class="">
+                    <input type="submit" value="Thêm chi tiết kho" class="btn btn-outline-dark" required />
+                </div>
+                <div>
+                    <a class="btn btn-outline-secondary btn-sm" href="~/PhongKho/ChiTietKho/@Session["makho1"]" title="Trở lại">
+                        <i class="fas fa-retweet"></i>
+                        Trở lại
+                    </a>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-6">
+            @* Danh sách sản phẩm *@
+            <label for="sel2" class="form-label"><h4>Tra cứu tên sản phẩm và mã sản phẩm</h4></label> <br />
+            <select multiple class="form-select form-select-lg h-100 w-100 border-0" id="sel2" style="background-color: #f5f5f5; ">
+
+                @foreach (var item in dssp)
+                {
+                    <option>
+                        <span>@Html.DisplayFor(modelItem => item.TenSP) --- <span style="color:blue">@Html.DisplayFor(modelItem => item.MaSP)</span> </span>
+                    </option>
+                }
+            </select>
         </div>
     </div>
-</div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "QuanLyKho")
-</div>
+
