--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -77,15 +77,15 @@
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.nk" href="~/PhongKho/NhapKho">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý phiếu nhập/xuất</span>
-                </a>
-            </li>
-            <li>
                 <a class="app-menu__item @ViewBag.tk" href="~/PhongKho/TonKho">
                     <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
                         Tồn kho
                     </span>
+                </a>
+            </li>
+            <li>
+                <a class="app-menu__item @ViewBag.nk" href="~/PhongKho/NhapKho">
+                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Phiếu nhập & xuất</span>
                 </a>
             </li>
             <li>
