--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -98,51 +98,54 @@
                     </div>
                 </div>
                 <h3 class="tile-title" style="text-align:center">SẢN PHẨM SẮP HẾT HÀNG</h3>
-                <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-                       id="sampleTable">
-                    <thead>
-                        <tr>
-                            <th>Mã Kho</th>
-                            <th>Mã sản phẩm</th>
-                            <th>Tên sản phẩm</th>
-                            <th>Giá tiền</th>
-                            <th>Đơn vị tính</th>
-                            <th>Số lượng</th>
-                            <th>Tình trạng</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in dsctk)
-                        {
-                            if (item.TinhTrang == "Sắp hết hàng" || item.TinhTrang == "Hết hàng")
+                <div class="table-responsive">
+                    <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+                           id="sampleTable">
+                        <thead>
+                            <tr>
+                                <th>Mã Kho</th>
+                                <th>Mã sản phẩm</th>
+                                <th>Tên sản phẩm</th>
+                                <th>Giá tiền</th>
+                                <th>Đơn vị tính</th>
+                                <th>Số lượng</th>
+                                <th>Tình trạng</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in dsctk)
                             {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.MaKho)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.MaSP)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.SanPham.TenSP)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.SanPham.Gia)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.SanPham.DonViTinh)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.SoLuong)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.TinhTrang)
-                                    </td>
-                                </tr>
+                                if (item.TinhTrang == "Sắp hết hàng" || item.TinhTrang == "Hết hàng")
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaKho)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaSP)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.SanPham.TenSP)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.SanPham.Gia)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.SanPham.DonViTinh)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.SoLuong)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TinhTrang)
+                                        </td>
+                                    </tr>
+                                }
                             }
-                        }
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
+
+                </div>    
             </div>
         </div>
     </div>
