--- a/Test02/Views/KhachHang/DonHangDL.cshtml
+++ b/Test02/Views/KhachHang/DonHangDL.cshtml
@@ -4,76 +4,81 @@
     ViewBag.Title = "DonHangDL";
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
     ViewBag.dhdl = "active";
-    ViewBag.Name = "Đơn hàng";
+    ViewBag.nd = "Trang Đơn Hàng";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
-<h2>Danh sách đơn hàng</h2>
+<div class="row">
+    <div class="col-md-12">
+        <div class="tile">
+            <h3 class="tile-title">DANH SÁCH ĐƠN HÀNG</h3>
+            <div class="tile-body">
+                <table class="table">
+                    <tr>
+                        <th>
+                            Mã đơn hàng
+                        </th>
+                        <th>
+                            Ngày lập
+                        </th>
+                        @*<th>
+                                Số lượng
+                            </th>
+                            <th>
+                                Giá
+                            </th>
+                            <th>
+                                Chiết khấu
+                            </th>*@
+                        <th>
+                            Trạng thái tiếp nhận
+                        </th>
+                        <th>
+                            Tình trạng thanh toán
+                        </th>
+                        <th>Chức năng</th>
+                    </tr>
+                    @{
+                        var user = (Test02.Models.DaiLy)HttpContext.Current.Session["userDL"];
+                    }
+                    @{ var mdl = user.MaDL;}
+                    @foreach (var item in Model)
+                    {
+                        if (item.MaDL == mdl)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.MaDH)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.NgayLap)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TrangThai)
+                                </td>
+                                @*<td>
+                                        @{var ck = item.DonHang.DaiLy.LoaiDL.ChietKhau * 100;
+                                          string str = Convert.ToString(ck);}
+                                        @Html.DisplayFor(modelItem => str)%
 
+                                    </td>*@
+                                @*<td>
+                                        @Html.DisplayFor(modelItem => item.ThanhTien)
+                                    </td>*@
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Hủy đơn", "DeleteDH", new { id = item.MaDH }) |
+                                    @Html.ActionLink("Chi tiết", "DetailsDH", new { id = item.MaDH })
+                                </td>
+                            </tr>
+                        }
 
-<table class="table">
-    <tr>
-        <th>
-            Mã đơn hàng
-        </th>
-        <th>
-            Ngày lập
-        </th>
-        @*<th>
-            Số lượng
-        </th>
-        <th>
-            Giá
-        </th>
-        <th>
-            Chiết khấu
-        </th>*@
-        <th>
-            Trạng thái tiếp nhận
-        </th>
-        <th>
-            Tình trạng thanh toán
-        </th>
-        <th>Chức năng</th>
-    </tr>
-    @{
-        var user = (Test02.Models.DaiLy)HttpContext.Current.Session["userDL"];
-      }
-    @{ var mdl = user.MaDL;}
-    @foreach (var item in Model)
-    {
-        if (item.MaDL == mdl)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MaDH)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NgayLap)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TrangThai)
-                </td>
-                @*<td>
-                    @{var ck = item.DonHang.DaiLy.LoaiDL.ChietKhau * 100;
-                      string str = Convert.ToString(ck);}
-                    @Html.DisplayFor(modelItem => str)%
+                    }
 
-                </td>*@
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.ThanhTien)
-                </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
-                </td>
-                <td>
-                    @Html.ActionLink("Hủy đơn", "DeleteDH", new { id = item.MaDH }) |
-                    @Html.ActionLink("Chi tiết", "DetailsDH", new { id = item.MaDH })
-                </td>
-            </tr>
-        }
-            
-    }
-
-</table>
-
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
