--- a/Test02/Views/KhachHang/PageSanPham.cshtml
+++ b/Test02/Views/KhachHang/PageSanPham.cshtml
@@ -3,9 +3,23 @@
     ViewBag.Title = "PageSanPham";
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
     ViewBag.tcdl = "active";
-    ViewBag.Name = "Trang chủ";
-}
+    ViewBag.nd = "Trang chủ";
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    if (TempData["Themvaogiohang"] != null)
+    {
+        <script>
+            swal({
+                title: "Đã thêm sản phẩm vào giỏ hàng thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
+}
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
@@ -16,35 +30,42 @@
                     {
                         <div style="margin:10px;">
                             <div class="widget-small primary coloured-icon">
-                                @if (item.MaSP == "SP71")
-                                {
-                                    <img src="~/Content/Img/SanPham/stingVang.jpg" style="height: 100px ; width: 100px;" alt="">
-                                }
-                                else if (item.MaSP == "SP84")
-                                {
-                                    <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
-                                }
-                                else if (item.MaSP == "SP13")
-                                {
-                                    <img src="~/Content/Img/SanPham/pepsi.jpg" style="height: 100px ; width: 100px;" alt="">
-                                }
-                                else if (item.MaSP == "SP15")
-                                {
-                                    <img src="~/Content/Img/SanPham/coca.png" style="height: 100px ; width: 100px;" alt="">
-                                }
-                                else if (item.MaSP == "SP55")
-                                {
-                                    <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
-                                }
-                                else
-                                {
-                                    <img src="~/Content/Img/SanPham/traolong.png" style="height: 100px ; width: 100px;" alt="">
-                                }
+                                <a href="/KhachHang/ChiTietSP/@item.MaSP">
+                                    @if (item.MaSP == "SP71")
+                                    {
+                                        <img src="~/Content/Img/SanPham/stingVang.jpg" style="height: 100px ; width: 100px;" alt="">
+                                    }
+                                    else if (item.MaSP == "SP84")
+                                    {
+                                        <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
+                                    }
+                                    else if (item.MaSP == "SP13")
+                                    {
+                                        <img src="~/Content/Img/SanPham/pepsi.jpg" style="height: 100px ; width: 100px;" alt="">
+                                    }
+                                    else if (item.MaSP == "SP15")
+                                    {
+                                        <img src="~/Content/Img/SanPham/coca.png" style="height: 100px ; width: 100px;" alt="">
+                                    }
+                                    else if (item.MaSP == "SP55")
+                                    {
+                                        <img src="~/Content/Img/SanPham/cocalight.jpg" style="height: 100px ; width: 100px;" alt="">
+                                    }
+                                    else
+                                    {
+                                        <img src="~/Content/Img/SanPham/traolong.png" style="height: 100px ; width: 100px;" alt="">
+                                    }
+                                </a>
                                 <div class="info">
                                     <h4>@Html.DisplayFor(modelItem => item.TenSP)</h4>
                                     <p><b>HSD: <b>@Html.DisplayFor(modelItem => item.HanSD)</b></b></p>
                                     <p><b>Mã sản phẩm: <b>@Html.DisplayFor(modelItem => item.MaSP)</b></b></p>
-                                    <p><b>Giá: <b>@Html.DisplayFor(modelItem => item.Gia)</b> VND</b></p>
+                                    <p>
+                                        <b>
+                                            Giá:
+                                            <b>@{var gia = string.Format("{0:0,0 VNĐ}", item.Gia);} @Html.DisplayFor(modelItem => gia)</b>
+                                        </b>
+                                    </p>
                                     <p><b></b></p>
                                     <p>
                                         <span class="badge bg-info">
@@ -52,8 +73,27 @@
                                             @Html.DisplayFor(modelItem => item.DonViTinh)
                                         </span>
                                         <span>
-                                            <button class="badge bg-info" style="border: 0px;">Đặt hàng</button>
+                                            @*<button class="badge bg-info btn btn-primary" data-bs-toggle="modal" data-bs-target="#mymodal" style="border: 0px;"></button>*@
+                                            <a class="badge bg-info" href="/KhachHang/ThemVaoGH/@item.MaSP">Thêm</a>
                                         </span>
+
+                                        <!--<div class="modal" id="myModal">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-body" style="margin-top: 20px">
+                                                        <h4>Bạn có muốn thêm sản phẩm này vào giỏ hàng không?</h4>-->
+                                        @*<label style="margin-top: 20px;">Số lượng cần mua</label>
+                                            <input type="number" placeholder="Nhập số lượng sản phẩm" style="width: 335px; height: 40px; margin-left: 10px; border-radius: 5px;" />*@
+                                        <!--</div>
+
+                                        <div class="modal-footer" style="margin-top: 20px;">-->
+                                        @*<button type="button" class="btn btn-close" data-bs-dismiss="modal">Hủy</button>*@
+                                        @*<button type="submit" class="btn btn-danger" data-bs-dismiss="modal">Thêm</button>*@
+                                        <!--<a href="/KhachHang/ThemVaoGH/@item.MaSP">Thêm</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>-->
                                     </p><br />
                                 </div>
                             </div>
